--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
       "target": "ES5",
-      "module": "commonjs",
+      "module": "ES6",
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
-      "lib": ["dom", "es5"],
+      "lib": ["dom", "es5", "ES2015"],
       "skipLibCheck": true // Skips type checking of all declaration files
     },
     "exclude": [
